Sequelize Branch
UPDATE SWAGGER

REMOVE: Templates

MOD: Service
