# src/api/v1/users/usersService.ts
@@ -1,40 +1,74 @@
 import { singleton } from 'tsyringe';
-import { User } from './user';
+import { IUser, IUserCreation, User } from './user.model';
 import logger from '../../../logging/winstonLogger';
+import { ApiError } from '../../../middlewares/apiErrors';
 
-// A post request should not contain an id.
-export type UserCreationParams = Pick<
-	User,
-	'firstname' | 'lastname' | 'email' | 'admin'
->;
 @singleton()
 export class UsersService {
-	private placeholder: string;
-
-	constructor() {
-		this.placeholder = 'blurgh';
-	}
-
-	public get(id: string, email?: string): User {
-		this.placeholder = '';
-		logger.info(`getting user with id:  ${id}`);
-		return {
-			id,
-			email: email || 'jane@doe.com',
-			firstname: 'Jne',
-			lastname: 'Doe',
-			admin: false,
-		};
-	}
-
-	public create(userCreationParams: UserCreationParams): User {
-		if (this.placeholder !== '') {
-			this.placeholder = '';
+	/**
+	 *  GET USER BY ID
+	 * @param userId  uuidv4
+	 * @returns {Promise<Iuser>} User
+	 */
+	async get(userId: string): Promise<IUser> {
+		try {
+			logger.info(`getting User with id: ${userId}`);
+			const user = await User.findByPk(userId);
+			if (user) {
+				return user;
+			}
+			throw new Error('User not found!');
+		} catch (error: any) {
+			logger.error(`Error getting User: ${error.message}`);
+			if (error.message === 'User not found!') {
+				throw new ApiError({
+					statusCode: 404,
+					name: 'NotFound',
+					message: error.message,
+				});
+			}
+			throw new ApiError({
+				statusCode: 500,
+				name: 'InternalServerError',
+				message: `Opps and error ocurred!`,
+			});
 		}
+	}
 
-		return {
-			id: Math.floor(Math.random() * 10000).toString(), // Random
-			...userCreationParams,
-		};
+	/**
+	 * GET ALL USER
+	 * @returns {IUser[]}  Users
+	 */
+	// eslint-disable-next-line class-methods-use-this
+	async getAll(): Promise<IUser[]> {
+		try {
+			const users = await User.findAll();
+			return users;
+		} catch (error: any) {
+			throw new ApiError({
+				statusCode: 500,
+				name: 'InternalServerError',
+				message: `Opps an error ocurred!`,
+			});
+		}
+	}
+
+	/**
+	 * CREATE AN USER
+	 * @param {IUserCreation} user UserCreationParams
+	 * @returns
+	 */
+	async create(user: IUserCreation): Promise<void> {
+		try {
+			logger.info(`Creating a new User ${user}`);
+			await User.create(user);
+		} catch (error: any) {
+			logger.error(`Error creating User ${error.message}`);
+			throw new ApiError({
+				statusCode: 500,
+				name: 'InternalServerError',
+				message: `Opps an error ocurred`,
+			});
+		}
 	}
 }
