# src/common/requestsBody/user.ts
@@ -1,0 +1,6 @@
+export interface UserCreationBody {
+	firstname: string;
+	lastname: string;
+	email: string;
+	admin: boolean;
+}
