# src/swagger.json
@@ -23,6 +23,10 @@
     {
       "name": "Example Routes",
       "description": "Hello World"
+    },
+    {
+      "name": "User Routes",
+      "description": "Some user routes"
     }
   ],
   "paths": {
@@ -36,7 +40,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Succesfully created a new GesExtensionRequest",
+            "description": "Succesfully get Hello World message",
             "content": {
               "application/json": {
                 "schema": {
@@ -45,6 +49,252 @@
                     "message": {
                       "type": "string",
                       "example": "Hello World!!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 500
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Internal Server Error"
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/users/": {
+      "post": {
+        "summary": "Create a new User",
+        "description": "Create a new user with requestBody",
+        "operationId": "createUser",
+        "tags": [
+          "User Routes"
+        ],
+        "responses": {
+          "201": {
+            "description": "Successfully create a new User"
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 422
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Validation Error"
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 500
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Internal Server Error"
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/users/get/{userId}": {
+      "get": {
+        "summary": "Get a User",
+        "description": "Get a user by Id",
+        "tags": [
+          "User Routes"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Succesfully get User",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "mongoId"
+                    },
+                    "firstname": {
+                      "type": "string"
+                    },
+                    "lastmane": {
+                      "type": "string"
+                    },
+                    "email": {
+                      "type": "string"
+                    },
+                    "id": {
+                      "type": "string",
+                      "example": "uuidv4"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "YYYY-MM-DDTHH:MM:ss"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "YYYY-MM-DDTHH:MM:ss"
+                    },
+                    "__v": {
+                      "type": "number"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFound Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 404
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Internal Server Error"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "User not found!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 500
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Internal Server Error"
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/users/all": {
+      "get": {
+        "summary": "Get all Users",
+        "description": "Get all users",
+        "tags": [
+          "User Routes"
+        ],
+        "responses": {
+          "200": {
+            "description": "Sucessfully get all users",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "mongoId"
+                      },
+                      "firstname": {
+                        "type": "string"
+                      },
+                      "lastmane": {
+                        "type": "string"
+                      },
+                      "email": {
+                        "type": "string"
+                      },
+                      "id": {
+                        "type": "string",
+                        "example": "uuidv4"
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "YYYY-MM-DDTHH:MM:ss"
+                      },
+                      "updatedAt": {
+                        "type": "string",
+                        "example": "YYYY-MM-DDTHH:MM:ss"
+                      },
+                      "__v": {
+                        "type": "number"
+                      }
                     }
                   }
                 }
